[project]
name = "bodyloop-dashboards"
version = "0.1.0"
description = "BodyLoop Dashboards"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bodyloop-sdk>=2026.4.13.2",
    "dash>=3.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
]

[project.scripts]
bodyloop-dashboards = "bodyloop_dashboards.app:main"

[tool.uv]
package = true
